canvas can be scaled
При использовании колёсика мыши проиходит зумирование холста

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 		<script type="text/javascript" src="app.js"></script>
 	</head>
 	<body onLoad="init()">
-		<canvas id="canvas-element-id" width="800" height="600" onmousemove="processMouseMove(event)" onmousedown="processMouseDown(event)" onmouseup="processMouseUp(event)">
+		<canvas id="canvas-element-id" width="800" height="600" 
+			onmousemove="processMouseMove(event)" 
+			onmousedown="processMouseDown(event)" 
+			onmouseup="processMouseUp(event)">
 			Your browser does not support the HTML5 canvas element.
 		</canvas>
 	</body>
