"to JSON" button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 			onmouseup="processMouseUp(event)">
 			Your browser does not support the HTML5 canvas element.
 		</canvas>
+		<div>
+			<input value="to JSON" onclick="onSave()" type="button">
+		</div>
 	</body>
 </html>
 	
