Right clock is used to add/remove points
Добавление и удаление точек осуществляется теперь при помощи ПКМ, а не
комбинациями Shift+ЛКМ и Alt+ЛКМ

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<canvas id="canvas-element-id" width="640" height="480" 
 			onmousemove="processMouseMove(event)" 
 			onmousedown="processMouseDown(event)" 
-			onmouseup="processMouseUp(event)">
+			onmouseup="processMouseUp(event)"
+			oncontextmenu="processContextMenu(event)">
 			Your browser does not support the HTML5 canvas element.
 		</canvas>
 		<div>
