--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		<div>
 			<input value="to JSON" onclick="onSave()" type="button">
 		</div>
+		<div>
+			<p>Use right click to add new point or remove existing point.</p>
+			<p>Use left click and move your mouse to move point or pan image</p>
+			<p>Use wheel to zoom image.</p>
+		</div>
 	</body>
 </html>
 	
