Index of selected point is shown under canvas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<input value="to JSON" onclick="onSave()" type="button">
 		</div>
 		<div>
+			<p id="selected-point-info">No selected point.</p>
 			<p>Use right click to add new point or remove existing point.</p>
 			<p>Use left click and move your mouse to move point or pan image</p>
 			<p>Use wheel to zoom image.</p>
